syntax = "proto3";

package xray.proxy.hysteria;
option csharp_namespace = "Xray.Proxy.Hysteria";
option go_package = "github.com/xtls/xray-core/proxy/hysteria";
option java_package = "com.xray.proxy.hysteria";
option java_multiple_files = true;

import "common/protocol/server_spec.proto";
import "common/protocol/user.proto";

message ClientConfig {
  int32 version = 1;
  xray.common.protocol.ServerEndpoint server = 2;
}

message ServerConfig {
  repeated xray.common.protocol.User users = 1;
}