syntax = "proto3";

package xray.transport.internet.hysteria2;
option csharp_namespace = "Xray.Transport.Internet.Hysteria2";
option go_package = "github.com/xtls/xray-core/transport/internet/hysteria2";
option java_package = "com.xray.transport.internet.hysteria2";
option java_multiple_files = true;

message Config {
  bool udp = 1;
  string auth = 2;
  uint64 up = 3;
  uint64 down = 4;

  uint64 init_stream_receive_window = 5;
  uint64 max_stream_receive_window = 6;
  uint64 init_conn_receive_window = 7;
  uint64 max_conn_receive_window = 8;
  int64 max_idle_timeout = 9;
  int64 keep_alive_period = 10;
  bool disable_path_mtu_discovery = 11;
}

